--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "emotion": "^10.0.17",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.0"
+    "react-flexbox-grid": "^2.1.2",
+    "react-ga": "^2.6.0",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.1.0",
+    "react-timeline-scribble": "https://github.com/project-cemetery/react-timeline-scribble/tarball/master"
   },
   "scripts": {
     "start": "react-scripts start",
