--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-ga": "^2.6.0",
     "react-images": "^1.0.0",
     "react-photo-gallery": "^8.0.0",
+    "react-responsive": "^8.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.0",
     "react-timeline-scribble": "https://github.com/project-cemetery/react-timeline-scribble/tarball/master"
