--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "emotion": "^10.0.17",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "emotion": "^10.0.27",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-flexbox-grid": "^2.1.2",
-    "react-ga": "^2.6.0",
+    "react-ga": "^2.7.0",
     "react-images": "^1.0.0",
     "react-photo-gallery": "^8.0.0",
-    "react-responsive": "^8.0.1",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.0",
+    "react-responsive": "^8.0.3",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.4.0",
     "react-timeline-scribble": "https://github.com/project-cemetery/react-timeline-scribble/tarball/master"
   },
   "scripts": {
