Setup firebase hosting and updated packages

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,17 @@
 {
   "projects": {
     "default": "douglasrcjamescom"
+  },
+  "targets": {
+    "douglasrcjamescom": {
+      "hosting": {
+        "test": [
+          "douglasrcjames-v1"
+        ],
+        "live": [
+          "douglasrcjamescom"
+        ]
+      }
+    }
   }
 }
